--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           aria-controls="nav-home"
           aria-selected="true"
         >
-          В роботі
+          Angebot
         </button>
         <button
           class="nav-link link-success"
@@ -78,7 +78,7 @@
           aria-controls="doneTable"
           aria-selected="false"
         >
-          Закриті
+          Vollendet
         </button>
         <button
           class="nav-link link-secondary"
@@ -90,7 +90,7 @@
           aria-controls="deleteTable"
           aria-selected="false"
         >
-          Скасовані
+          Zum Archiv
         </button>
         <button
           class="nav-link link-danger"
@@ -102,7 +102,7 @@
           aria-controls="calTable"
           aria-selected="false"
         >
-          Запис
+          Planung
         </button>
       </div>
       <!-- контент вкладок -->
